src/main/java/com/example/servergraphql/spring/errors/Errors.java
package com.example.servergraphql.spring.errors;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor

public class Errors {
    private String msg;
}
